<resources>
            <string name="adReward" translatable="false">ca-app-pub-8011674951494696/2726130955</string>
            <string name="adReaderInt" translatable="false">ca-app-pub-8011674951494696/4934737105</string>
            <string name="adQuestionsInt" translatable="false">ca-app-pub-8011674951494696/7993749596</string>
            <string name="adQuestions" translatable="false">ca-app-pub-8011674951494696/4170948875</string>
            <string name="adReader" translatable="false">ca-app-pub-8011674951494696/3605507555</string>
            <string name="adChapter" translatable="false">ca-app-pub-8011674951494696/7079802411</string>
            <string name="adHome" translatable="false">ca-app-pub-8011674951494696/8312993039</string>
            <string name="admob_app_id" translatable="false">ca-app-pub-8011674951494696~8662393111</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_am" translatable="false">\u12a0\u121b\u122d\u129b</string>
    <string name="lang_or" translatable="false">Afaan Oromo</string>
    <string name="lang_ar" translatable="false">\u0639\u0631\u0628\u064A</string>
    <string name="nav_header_subtitle" translatable="false">apps@datascienceplc.com</string>
    <string name="app_name">1-12 Text Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">1-12 Textbooks</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="downloading"> Downloading...</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="no_file">File not found.</string>
    <string name="no_file_desc_pre"> </string>
    <string name="no_file_desc_pos"> Download to read this unit.</string>
    <string name="try_later">"No/Slow internet connection! Please try later"</string>
    <string name="share_link_pre">Hey! Have you downloaded </string>
    <string name="share_link_center"> app? Download the app here </string>
    <string name="share_link_pos"> and you will forever be happy just like me because the app has the most important thing ever.</string>
    <string name="app_description">This app covers All Text Books From grade 1 - 12. This app will be useful for students with no need of Internet, works offline and only one time download with complete features. </string>
    <string name="about">About</string>
    <string name="menu_share">Tell a friend (Link)</string>
    <string name="action_rate">Rate us (5 Star)</string>
    <string name="action_store">Other apps</string>
    <string name="exit">Exit</string>
    <string name="pls_wait">\n\nTelegram:-@ethio_textbooks</string>
    <string name="menu_g12">Grade 12</string>
    <string name="menu_g11">Grade 11</string>
    <string name="menu_g10">Grade 10</string>
    <string name="menu_g9">Grade 9</string>
    <string name="menu_g8">Grade 8</string>
    <string name="menu_g7">Grade 7</string>
    <string name="menu_g6">Grade 6</string>
    <string name="menu_g5">Grade 5</string>
    <string name="menu_g12t">Grade 12 Teachers Guide</string>
    <string name="menu_g11t">Grade 11 Teachers Guide</string>
    <string name="menu_g10t">Grade 10 Teachers Guide</string>
    <string name="menu_g9t">Grade 9 Teachers Guide</string>
    <string name="menu_g8t">Grade 8 Teachers Guide</string>
    <string name="menu_g7t">Grade 7 Teachers Guide</string>
    <string name="menu_g4">Grade 4</string>
    <string name="menu_g3">Grade 3</string>
    <string name="menu_g2">Grade 2</string>
    <string name="menu_g1">Grade 1</string>
    <string name="others">Others</string>
    <string name="ok">OK</string>
    <string name="menu_ad_free">Premium user</string>
    <string name="action_delete_subject">Delete units</string>
    <string name="Delete">delete</string>
    <string name="yes">Yes</string>
    <string name="menu_questions">Worksheet</string>
    <string name="questions_intro">Please be patient til we complete the exercise questions for all grades.\n\nTelegram @ethio_textbooks 0923481783</string>
    <string name="start_questionnaire">Start the exercise</string>
    <string name="show_result">Show result</string>
    <string name="about_short">*Free* apps from DataScience P.L.C.\nEmail: apps@datascienceplc.com</string>
    <string name="test_exam">Exercise questions</string>
    <string name="answer">Answers</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="show_answer">Show the answer there</string>
    <string name="open_shortnote">Open note</string>
    <string name="app_restart">This is your first time coming to practice questions. Please make sure you have internet and click \"Try Again\".</string>
    <string name="thanks_for_activated">Thank you! Please restart the application.</string>
    <string name="wrong_code">You have used an incorrect or expired code.</string>
    <string name="check_your_internet">Please make sure you have internet or try again later.</string>
    <string name="premium_intro">If you registered as a Premium user, you will not see Google ads. Click here for more information.\n\nTelegram @ethio_textbooks 0923481783</string>
    <string name="try_again">Try again</string>
    <string name="loading">Loading...</string>
    <string name="your_name">Your name</string>
    <string name="phone">Phone No</string>
    <string name="code">Code</string>
    <string name="active">Activate</string>
    <string name="your_license_type">Type : </string>
    <string name="paid_date">Date of payment : </string>
    <string name="out_date">Expire date : </string>
    <string name="license_out_dated">Your privilege period has expired! Please pay</string>
    <string name="license_not_out_dated">If you delete the application from your phone, the privilege will not be valid.\nThank you for subscribing.</string>
    <string name="not_registed">You are not registered as a Premium user. Please register.</string>
    <string name="fill_the_form">Please fill the above in advance.</string>
    <string name="you_can_download_again">You can download it again at any time :)</string>
    <string name="rewarded">Rewarded!</string>
    <string name="reward_added">Your reward added to your profile. Thank you for reading!</string>
    <string name="menu_ad_reward">Reward</string>
    <string name="startReward">StartReward</string>
    <string name="reward_intro">click here to order payment .... mnamn</string>
    <string name="college_books">College Books (App link)</string>
    <string name="experts_way">ExpertsWay (App link)</string>
    <string name="add_books">Upload Book</string>
    <string name="no_network_title">No Network Available</string>
    <string name="no_network_message">We cannot detect a network connection on this device. Please check your mobile data or Wi-Fi and try again.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="all_new_curriculum_books">New curriculum books</string>
    <string name="my_new_curriculum_books">Favorite new Curriculum books</string>
    <string name="fav_old_curriculum_books">Favorite old Curriculum books</string>
    <string name="old_curriculum_books">Old Curriculum books</string>
    <string name="load_more_text">Load more comments</string>
    <string name="settings_title">Settings</string>
    <string name="save_button_text">Save</string>
    <string name="select_language_prompt">Select a language:</string>
    <string name="restart_the_app">Please restart the app!</string>
    <string name="skip">Skip</string>
    <string name="coming_soon">Chapter based Quiz - Coming soon!</string>
    <string name="sign_in_first">You should sign in first!</string>
    <string name="loading_comments">Loading comments...</string>
    <string name="click_here_to_retry">Click here to retry</string>
    <string name="comments">Comments</string>
    <string name="quiz_on_this_unit">Quiz on this unit</string>
    <string name="new_quiz_on_this_unit">Add quiz on this unit</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="click_to_post">Click to post</string>
    <string name="see">See</string>
    <string name="replies"> replies</string>
    <string name="post">Post</string>
    <string name="end_of_replies">End of replies</string>
    <string name="end_of_comments">End of comments</string>
    <string name="report_comment">Report Comment</string>
    <string name="report_reason">Please enter the reason for reporting this comment:</string>
    <string name="report">Report</string>
    <string name="thanks_for_reporting">Thank you for reporting! We\'ll review the comment</string>
    <string name="thanks_for_the_quiz">Thank you for quiz! We\'ll review it shortly.</string>
    <string name="connection_error">Connection Error. Please check your mobile data or Wi-Fi and try again.</string>
    <string name="connection_timeout">Connection Timeout!</string>
    <string name="no_comments_yet">No comments yet.\nBe the first one to share your thoughts.</string>
    <string name="write_your_comment">Write your feedback/comment/suggestion....</string>
    <string name="confirem_delete">Confirm Delete</string>
    <string name="confirem_delete_message">Are you sure you want to delete this item?</string>
    <string name="theme_mode_light">Light</string>
    <string name="theme_mode_dark">Dark</string>
    <string name="quiz_intro">Please be patient til we load the quiz for this unit.</string>
    <string name="accept_the_terms">You should accept the terms and Conditions</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="thank_you">Thank You!</string>
    <string name="quiz_not_found">Quiz not found</string>
    <string name="no_quiz_added">So far, quiz not added for this unit. we\'ll try to add soon.</string>
    <string name="back">Back</string>
    <string name="practical">Practical!</string>
    <string name="signout">Sign out</string>
    <string name="favorite_subject">Favorite</string>
    <string name="blockchain">Blockchain Tech</string>
    <string name="enable_location_service">Location services are turned off. Please enable them to get your current location.</string>
    <string name="enable">Enable</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_permission_not_granted">Location permission not granted!</string>
    <string name="payment_ordered">Payment Ordered. Please wait...</string>
    <string name="order_payment">Order Payment</string>
    <string name="total_rewards">Total Rewards:</string>
    <string name="pending_0">Pending: 0</string>
    <string name="paid_0">Paid: 0</string>
    <string name="load_more">Load More</string>
    <string name="minimum_payment_order">"The minimum payment order allowed is "</string>
    <string name="etb">" ETB."</string>
    <string name="already_ordere">You have already ordered. Please wait until your queue is processed.</string>
    <string name="payment_ordered_successfully">Payment ordered successfully!</string>
    <string name="reward_receiver_ethiotel_phone_number">Reward receiver EthioTel Phone Number</string>
    <string name="request_payment">Request Payment</string>
    <string name="invalid_ethiopian_phone_number">Invalid Ethiopian phone number!</string>
</resources>