<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/app_bar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            >

            <TextView
                android:id="@+id/tvPremium"
                android:textStyle="bold"
                android:layout_gravity="left|right|center_horizontal|center_vertical|fill_horizontal|center|fill|start|end"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:autoLink="web"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
                android:text="@string/premium_intro"

                android:layout_centerVertical="true"
                android:textAllCaps="false"
                android:textSize="18sp"/>


            <TextView
                android:id="@+id/percentAnsQue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAllCaps="false"
                android:textSize="18sp"/>

<LinearLayout
    android:id="@+id/layoutPremiumForm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_gravity="left|right|center_horizontal|center_vertical|fill_horizontal|center|fill|start|end"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "Your id is 32534"
        android:id = "@+id/tvMac"
        android:layout_below = "@+id/textview"
        android:layout_centerHorizontal = "true"
        android:textColor = "#ff7aff24"
        android:textSize = "35dp" />


    <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/your_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/code"
                android:inputType="text" />


    <Button
        android:id="@+id/btnUpdate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/active"
        android:textAllCaps="false"
        android:textSize="18sp"
        />


    <TextView
        android:id="@+id/tvShow_license"
        android:textStyle="bold"
        android:layout_gravity="left|right|center_horizontal|center_vertical|fill_horizontal|center|fill|start|end"
        android:layout_weight="1.0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Show users current license"
        android:layout_centerVertical="true"
        android:textAllCaps="false"
        android:textSize="18sp"/>



</LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
